2321 - added versions, custom action and help links, sf